# aether-tauri

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  ECOSYSTEM.md  GUIDE.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  USAGE.md  VERSIONS.md  aether.sh  api_server.py  index.html  install-windows.ps1  install.sh  launch-aether.sh  package-lock.json  package.json  requirements.txt  verify_core.py  verswun.txt  vite.config.ts
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
agent/: aether_agent.py  agent_architecture.py  core_tools.py  logger.py  mcp_client.py  p2p_sync.py  rag_engine.py  ralph_loop.py  session_schema.json  skill_loader.py  system_scanner.py
agent/skills/: code-review.skill.json  file_io.skill.json  research-and-architecture.md
agent/sync/: manager.py
agent/vision_voice/: vision.py
docs/: ADVANCED_FEATURES.md  ARCHITECTURE.md  DOWNLOAD.md  GETTING_STARTED.md  STYLE_GUIDE.md
docs/marketing/: ANIMATED_DEMO_AD.html  COPY_AND_PASTE_POSTS.md
docs/mockups/: ChatView.html
marketing/demo/: VIDEO_SCRIPT.md
pkgconfig/: javascriptcoregtk-4.0.pc  libsoup-2.4.pc  webkit2gtk-web-extension-4.0.pc
scripts/: hw_check.sh
src/: App.tsx  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  model_manager.rs
toolbox/: aether_eye.py  aether_fs.py  core_tools.py  edit_file.ps1  glob_files.ps1  grep_search.ps1  list_files.sh  manifest.json  net_monitor.py  net_recon.ps1  net_scan.ps1  shell_exec.sh  skill_porter.py  sys_automation.py  system_optimizer.py  voice_ops.ps1  web_search.ps1  write_file.sh
tools/: monitor.py
(+25 files in other folders)
