[package]
name = "aether-desktop"
version = "1.0.0"
description = "Aether-AI Desktop — Local-first AI Workstation"
authors = ["Aether-AI Contributors"]
license = "MIT"
repository = "https://github.com/earnerbaymalay/aether"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-all", "fs-all", "path-all", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
which = "5.0"
sysinfo = "0.30"

[features]
custom-protocol = ["tauri/custom-protocol"]
