[package]
name = "aether-tauri"
version = "26.5.1"
description = "Aether — The Local-First Neural Operating Interface"
authors = ["pat21 <earnerbaymalay>"]
license = "MIT"
repository = "https://github.com/earnerbaymalay/aether"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "shell-all", "fs-all", "path-all", "os-all", "linux-protocol-headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
which = "5.0"
sysinfo = "0.30"
os_info = "3.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
